package fr.fges.data;

import com.fasterxml.jackson.core.type.TypeReference;
import com.fasterxml.jackson.databind.ObjectMapper;
import fr.fges.business.BoardGame;

import java.io.File;
import java.io.IOException;
import java.util.ArrayList;
import java.util.List;

public class JsonGameRepository implements GameRepository {
    private final String filepath;
    private final ObjectMapper mapper = new ObjectMapper();

    public JsonGameRepository(String filepath) {
        this.filepath = filepath;
    }

    @Override
    public List<BoardGame> getAll() {
        File file = new File(filepath);
        if (!file.exists()) {
            return new ArrayList<>();
        }
        try {
            return mapper.readValue(file, new TypeReference<List<BoardGame>>() {});
        } catch (IOException e) {
            System.out.println("Error loading from JSON: " + e.getMessage());
            return new ArrayList<>();
        }
    }

    @Override
    public void add(BoardGame game) {
        List<BoardGame> games = getAll();
        games.add(game);
        save(games);
    }

    @Override
    public void remove(BoardGame game) {
        List<BoardGame> games = getAll();
        games.remove(game);
        save(games);
    }

    public void save(List<BoardGame> games) {
        try {
            mapper.writerWithDefaultPrettyPrinter().writeValue(new File(filepath), games);
        } catch (IOException e) {
            System.out.println("Error saving to JSON: " + e.getMessage());
        }
    }
}
